--- a/bin/vista/PantallaAdministrador.form
+++ b/bin/vista/PantallaAdministrador.form
@@ -3186,6 +3186,9 @@
                       </AuxValues>
                     </Component>
                     <Component class="javax.swing.JCheckBox" name="jCheckBox2">
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+                      </AuxValues>
                     </Component>
                   </SubComponents>
                 </Container>
