--- a/bin/vista/PantallaAdministrador.form
+++ b/bin/vista/PantallaAdministrador.form
@@ -3257,8 +3257,8 @@
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                               <Table columnCount="2" rowCount="4">
-                                <Column editable="true" title="Titulo Distribucion Pelicula" type="java.lang.Object"/>
-                                <Column editable="true" title="Id Pelicula" type="java.lang.Object"/>
+                                <Column editable="true" title="titulo" type="java.lang.Object"/>
+                                <Column editable="true" title="idPelicula" type="java.lang.Object"/>
                               </Table>
                             </Property>
                           </Properties>
