--- a/src/vista/PantallaAdministrador.form
+++ b/src/vista/PantallaAdministrador.form
@@ -3733,6 +3733,9 @@
                               </Table>
                             </Property>
                           </Properties>
+                          <AuxValues>
+                            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+                          </AuxValues>
                         </Component>
                       </SubComponents>
                     </Container>
